--- a/demo/index.html
+++ b/demo/index.html
@@ -22,8 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../iron-selector/iron-selector.html">
   <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
   <link rel="import" href="../lazy-pages.html">
-  <link rel="import" href="../../neon-animation/animations/slide-up-animation.html">
-  <link rel="import" href="../../neon-animation/animations/slide-down-animation.html">
+  <link rel="import" href="../../neon-animation/animations/slide-from-right-animation.html">
 
   <style is="custom-style">
 
@@ -37,65 +36,72 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding: 8px;
       border: 1px solid black;
     }
+    iron-selector > div.iron-selected {
+      background-color: gray;
+    }
 
     lazy-pages > * {
       border: 1px solid black;
       background-color: white;
       opacity: 1;
+      box-sizing: border-box;
     }
 
+    lazy-pages {
+      width: 400px;
+      height: 300px;
+    }
 
   </style>
 </head>
-<body class="fullbleed">
+<body>
 
-<template is="dom-bind">
+<template id="t" is="dom-bind">
   <p>This is a very bare demo. Additional, more colorful demos are <a href="declarative/">declarative</a>, or <a href="tiles/">tiles</a>.
   You can compare them to original neon-animated-pages <a href='https://elements.polymer-project.org/elements/neon-animation?view=demo:demo/index.html&active=neon-animated-pages' target="_new">here</a></p>
-  <pre>iron-selector</pre>
+  <pre>select a page number to see them animate</pre>
   <iron-selector selected="{{selected}}">
     <div>one</div>
     <div>two</div>
-    <div>three</div>    <div>four</div>    <div>five</div>
+    <div>three</div>
+    <div>four</div>
+    <div>five</div>
   </iron-selector>
-  <pre>selected:<span>{{selected}}</span></pre>
   <pre>lazy-pages</pre>
   <lazy-pages selected="{{selected}}">
     <template is="dom-if">
-      <div>
-        Page One is inside a dom-if
+      <div style="background-color: #EEE">
+        <p>Page One is inside a dom-if</p>
       </div>
     </template>
-    <section>Page Two is just a page</section>
+    <section style="background-color: #FBCECE">Page Two is just a page</section>
     <template is="dom-if" restamp>
-      <section>
-        <link rel="import" href="../../paper-button/paper-button.html">
+      <link rel="import" href="../../paper-button/paper-button.html">
+      <section style="background-color: #BDDCB3">
         Page Three with lazily loaded paper button
         <paper-button raised>I am that lazy button</paper-button>
       </section>
     </template>
-    <section>Page Four</section>
+    <section style="background-color: #B3C5DC">Page Four</section>
     <template is="dom-if" restamp>
-      <section>
-        <link rel="import" href="../../iron-icons/iron-icons.html">
-        <link rel="import" href="../../iron-icons/maps-icons.html">
+      <link rel="import" href="../../iron-icons/iron-icons.html">
+      <link rel="import" href="../../iron-icons/maps-icons.html">
+      <section style="background-color: #DCD0B3">
         Page Five with a lazily loaded icon <iron-icon icon="maps:hotel"></iron-icon>
-        The icon does not work first time it is shown. My guess is that's because iron-icon prototype gets upgraded before maps-icons are loaded
+        The icon sometimes does not work first time it is shown. My guess is that's because iron-icon prototype gets upgraded before maps-icons are loaded
       </section>
     </template>
   </lazy-pages>
 </template>
 
 <script>
-  document.querySelector('[is=dom-bind]').addEventListener('dom-change', function() {
+  document.addEventListener('WebComponentsReady', function() {
+    console.log("WebComponentsReady");
+    var t = document.querySelector('#t');
     var lp = document.querySelector('lazy-pages');
-    lp.entryAnimation = 'slide-up-animation';
-    lp.exitAnimation = 'slide-down-animation';
+    lp.entryAnimation = 'slide-from-right-animation';
+    t.selected = 0;
   });
-  // document.addEventListener('click', function(e) {
-  //   var pages = document.querySelector('power-pages');
-  //   pages.selectNext();
-  // });
 </script>
 
 </body>
